# csc-validator-be-cin

./: .gitignore  .pre-commit-config.yaml  CINxml_to_csv.py  README.md  cin_validator\england_holidates.py  create_CIN_issues.py  create_rule_list.py  demo_cin_tables.ipynb  england_holidates.py  fake_CIN_data.xml  get_uk_holidays.py  pyproject.toml  requirements.txt  rpc_main.py  ruleset.py  track_everything.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: linting.yaml  python-publish.yml  test.yml  validator_tests.yaml
Documentation/: RULE_PATTERNS.MD  api.md  create_CIN_issues.py  index.md
Documentation/debug_n_transform_scripts/: stringify_rule_codes.py
Documentation/rule_logic_demos/: rule2885_multitable_independent_compare.ipynb  rule8831_table_checks.ipynb  type3_compare_intervals_demo.ipynb  type3_demo2.ipynb  type3_rule8896.ipynb
Documentation/sample_output/: issue_report.json
cin-validator/: type_definitions.py  utils.py
cin-validator/rules/: rule_8500.py
cin_validator/: __main__.py  cin_validator.py  cin_validator_class.py  demo_ingress_class.ipynb  england_holidates.py  ingress.py  report.py  ruleset.py  tinkering.py  tinkering2.py  type_definitions.py  utils.py
cin_validator/ingress/: ingress.py
cin_validator/rule_engine/: __api.py  __context.py  __init__.py  __registry.py  test_context.py
cin_validator/rules/: rule_8500.py  ruleset_utils.py
cin_validator/rules/cin2022_23/: __init__.py  rule_100.py  rule_1103.py  rule_1104.py  rule_1105.py  rule_1510.py  rule_1520.py  rule_1530.py  rule_1540.py  rule_1550.py  rule_1560Q.py  rule_2883.py  rule_2884.py  rule_2885.py  rule_2886Q  rule_2886Q.py  rule_2887Q.py  rule_2888Q.py  rule_2889.py  rule_2990.py  rule_2991Q.py  rule_4000.py  rule_4001.py  rule_4003.py  (+93 more)
cin_validator/test_engine/: __init__.py
docs/: index.md
fake_data/: CIN2rows.xml  CIN_Census_2021.xml  CIN_Census_2021_no_assessment_factors.xml  CIN_Census_2024.xml  CIN_Census_2026.xml  CIN_header_issues_100.xml
output_csvs/: Assessments.csv  CINdetails.csv  CINplanDates.csv  ChildIdentifiers.csv  ChildProtectionPlans.csv  Disabilities.csv  Header.csv  Reviews.csv  Section47.csv
sample_output/: rule_defs.json
tests/: test_context.py  test_ruleset.py  test_utils.py
tests/rule_engine/: test_context.py  test_linked_issues.py  test_linking.py  test_registry.py  test_utils.py
(+40 files in other folders)
