[tool.poetry]
name = "cin-validator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "rpc_main.py" },
    { include = "cin_validator/**/*.py"  }	
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.4.2"
numpy = "1.22.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
isort = "^5.10.1"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
