[tool.poetry]
name = "cin-validator"
version = "0.1.0"
description = "Shared module for validating CIN census data using DfE rules."
authors = ["DatatoInsight's children's social care analyst community", "Tambe Tabitha <tambe.tabitha@socialfinance.org.uk>", "Kaj Siebert <kaj.siebert@socialfinance.org.uk>", "William Levack-Payne <william.levack-payne@eastsussex.gov.uk>", ]
packages = [
    { include = "rpc_main.py" },
    { include = "cin_validator/**/*.py"  }	
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.5.3"
govuk-bank-holidays = "^0.13"
testfixtures = "^7.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
isort = "^5.10.1"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
