[tool.poetry]
name = "csc-validator-be-cin"
version = "0.1.4"
description = "Shared module for validating CIN census data using DfE rules."
authors = ["Tambe Tabitha <tambe.tabitha@socialfinance.org.uk>", "Kaj Siebert <kaj.siebert@socialfinance.org.uk>", "William Levack-Payne <william.levack-payne@eastsussex.gov.uk>", "DatatoInsight's children's social care analyst community <datatoinsight.enquiries@gmail.com>"]
repository = "https://github.com/data-to-insight/csc-validator-be-cin"
license = "MIT"
readme = "README.md"
packages = [
    { include = "rpc_main.py" },
    { include = "cin_validator/**/*.py"  }	
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
govuk-bank-holidays = "^0.13"
testfixtures = "^7.1.0"
prpc-python = "^0.9.2"
click-log = "^0.4.0"
rich = "^13.5.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
isort = "^5.10.1"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
